# LabHW_112_Master

./: README.md
HW0/: HW0_Description.md  PeiYu.md  Po-Hsun.md.md  hsutzu.md
Project/: readme.md
Project/Labelimg/windows_v1.8.0/data/: predefined_classes.txt
Qt_project/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  yolo.cpp  yolo.h
